zebra-rpc/src/methods/tests/snapshots/get_block_template_proposal@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: block_template
---
null
