zebra-rpc/src/methods/tests/snapshots/get_block_verbose@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 246
expression: block
---
{
  "tx": [
    "851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609"
  ]
}
