zebra-rpc/src/methods/tests/snapshots/get_block_verbose@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 246
expression: block
---
{
  "tx": [
    "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75"
  ]
}
